--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "d3": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -39,6 +41,9 @@
   },
   "devDependencies": {
     "jsdocs": "^1.0.0",
-    "prop-types": "^15.7.2"
+    "prettier": "^2.3.2",
+    "prop-types": "^15.7.2",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0"
   }
 }
