--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,13 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "favicon32.ico",
+      "sizes": "32x32",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "favicon64.ico",
+      "sizes": "64x64",
       "type": "image/x-icon"
     },
     {
