--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     ]
   },
   "devDependencies": {
-    "jsdocs": "^1.0.0",
+    "jsdoc": "^3.6.7",
     "prettier": "^2.3.2",
     "prop-types": "^15.7.2",
     "stylelint": "^13.13.1",
