feat: add api and docker config
add api in folder micro-api
add docker config and script to launch and stop both frontend and api
frontend on port 3000 and api on port 3001
it's a dev version with hot reload enable for frontend

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "jsdoc": "./node_modules/.bin/jsdoc src -r -d docs/javascript --readme docs/javascript/homepage.md"
+    "jsdoc": "./node_modules/.bin/jsdoc src -r -d docs/javascript --readme docs/javascript/homepage.md",
+    "containers-start": "docker-compose -f docker-compose.dev.yml up -d",
+    "containers-end": "docker-compose -f docker-compose.dev.yml down"
   },
   "eslintConfig": {
     "extends": [
