feat: add a route in API and modify docker files
add a route for root of the API (usefull to check if API is online)
rename & modify dockerfile and docker-compose as there isn't prod files
add docker-compose script to built the image if needed (mainly for API)
modify readme accordingly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3'
 
 services:
   frontend:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
+    build: .
     volumes:
       - ./src:/app/src
     ports:
