--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "jsdoc": "./node_modules/.bin/jsdoc src -r -d docs/javascript --readme docs/javascript/homepage.md",
-    "containers-start": "docker-compose -f docker-compose.dev.yml up -d",
-    "containers-end": "docker-compose -f docker-compose.dev.yml down"
+    "containers-build": "docker-compose build",
+    "containers-start": "docker-compose up -d",
+    "containers-end": "docker-compose down"
   },
   "eslintConfig": {
     "extends": [
