fix: rename micro-api and remove script
micro-api rename as microApi
script is removed as it depend on user system
issue is related to "/" or "\\" in the path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,6 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
   api:
-    build: ./micro-api/
+    build: ./microApi/
     ports:
       - '3001:3001'
